xterm (236-1) UNRELEASED; urgency=low

  [ Brice Goglin ]
  * Update patches to not use -p0, closes: #485360.

  [ Julien Cristau ]
  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Sun, 15 Jun 2008 20:10:16 +0200

xterm (235-1) unstable; urgency=low

  * New upstream release.
    + adjust saved-cursor position if the window is resized while displaying
      the alternate screen (closes: #383384)
    + correct initialization of bold- and wide-, wide-bold fonts which may be
      set via the utf8Fonts subresource (closes: #347790)
  * Refresh patches 901_xterm_manpage.diff and 902_pointermode_never.diff.

 -- Julien Cristau <jcristau@debian.org>  Mon, 21 Apr 2008 02:48:05 +0200

xterm (234-1) unstable; urgency=low

  * New upstream release.
    + fix a case where an incorrect font was freed during initialization
      (closes: #471332)
    + improve resize computation for situations where the negotiation fails,
      by invoking the xterm widget's core-class resize method
      (closes: #365602)
  * Change doc-base section from `XShells' to `Terminal Emulators'; thanks,
    lintian!

 -- Julien Cristau <jcristau@debian.org>  Wed, 19 Mar 2008 15:08:03 +0100

xterm (232-1) unstable; urgency=low

  * New upstream release.
    + corrected logic in a font-cache used for reverse-video
      (closes: #404079)
    + allow building with configure options --disable-ansi-color and
      --disable-leaks (closes: #459817)
    + allow building with configure options --enable-wide-chars and
      --disable-c1-print (closes: #459816)
    + add pointerMode resource to control whether and when the pointer cursor
      is hidden as the user types; also fix it so it's really hidden instead
      of showing a black dot (closes: #460545)
    + add limit-checks to tabs.c, increase maximum column for setting
      tab-stops from 320 to 1024 (closes: #462621)
  * Set pointerMode to "never" by default, to restore pre-230 behaviour.