@@ -5,6 +5,7 @@ xterm (236-1) UNRELEASED; urgency=low
 
   [ Julien Cristau ]
   * New upstream release.
+  * Handle parallel=n in DEB_BUILD_OPTIONS.
 
  -- Brice Goglin <bgoglin@debian.org>  Sun, 15 Jun 2008 20:10:16 +0200
 
